[package]
name = "set-header"
version = "0.1.0"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tunneload-plugin = { path = "../tunneload-plugin" }
