[package]
name = "tunneload-plugin-macros"
version = "0.1.0"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.72", features = ["full", "fold"] }
quote = "1.0"
