[package]
name = "tunneload-plugin"
version = "0.1.0"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stream-httparse = { version = "0.2.3" }
tunneload-plugin-macros = { path = "../tunneload-plugin-macros" }

log = { version = "0.4" }
tokio = { version = "1.7", default_features = false, features = ["rt"] }
